// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Miss Dimension Values Tests should replace empty dimension value placeholder when copy formatted data 1`] = `
"一级维度	二级维度	三级维度	数值
总计	-	-	1732771
维值-1	维值-2	维度-3	12222
维值-1	维值-3	维值-3	11111
维值-1	维值-3	维度-3	11111
维值-1	维值-3	小计	-
维值-1	小计		456
测试-1	测试-2	维度-3	4444567
测试-1	测试-3	-	785222
测试-1	测试-4	维度-3	6455644
测试-1	测试-5	维度-3	1111
测试-1	小计		125555
测试-6	测试-x	-	111111
测试-6	测试-7	-	67878
测试-6	测试-8	-	456.464
测试-6	小计		123.416"
`;

exports[`Miss Dimension Values Tests should replace empty dimension value placeholder when copy original data 1`] = `
"first	second	third	number
总计	$$empty_field_value$$	$$empty_field_value$$	1732771
维值-1	维值-2	维度-3	12222
维值-1	维值-3	维值-3	11111
维值-1	维值-3	维度-3	11111
维值-1	维值-3	小计	
维值-1	小计		456
测试-1	测试-2	维度-3	4444567
测试-1	测试-3	$$empty_field_value$$	785222
测试-1	测试-4	维度-3	6455644
测试-1	测试-5	维度-3	1111
测试-1	小计		125555
测试-6	测试-x	$$empty_field_value$$	111111
测试-6	测试-7	$$empty_field_value$$	67878
测试-6	测试-8	$$empty_field_value$$	456.464
测试-6	小计		123.416"
`;
